--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link active" aria-current="page"
-                            href="beranda.html"><b>Beranda</b></a></li>
+                            href="index.html"><b>Beranda</b></a></li>
                     <li class="nav-item"><a class="nav-link" href="paket_wisata.html">Paket Wisata</a></li>
                     <li class="nav-item"><a class="nav-link" href="pemesanan.html">Pemesanan</a></li>
                 </ul>
