--- a/pemesanan.html
+++ b/pemesanan.html
@@ -64,13 +64,9 @@
                                 <label for="waktuPerjalanan" class="form-label">Waktu Perjalanan</label>
                                 <input type="date" class="form-control" id="waktuPerjalanan">
                             </div>
-                            <div class="mb-3">
-                                <label for="pelayananPaket" class="form-label">Pelayanan Paket Perjalanan</label>
-                                <select class="form-select" id="pelayananPaket">
-                                    <option value="" selected disabled>Pilih Paket</option>
-                                    <option value="paket1">Paket 1</option>
-                                    <option value="paket2">Paket 2</option>
-                                </select>
+                             <div class="mb-3">
+                                <label for="waktuPerjalanan" class="form-label">Waktu Kepulangan</label>
+                                <input type="date" class="form-control" id="waktuPerjalanan">
                             </div>
                             <div class="mb-3">
                                 <label for="jumlahPeserta" class="form-label">Jumlah Peserta</label>
